--- a/marlin/marlinjsonscripts/.classpath
+++ b/marlin/marlinjsonscripts/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="lib" path="libs/gson-1.4.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/marlinsdk"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
